--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,40 +1,22 @@
-button {
-  color: var(--primary-bg-color);
-  background-color: var(--accent-logo-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
-  width: 200px;
-  height: 50px;
-  border-width: 0px;
-  border-radius: 4px;
-  cursor: pointer;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-}
-
-.btn {
+.hero__button {
+  @extend %button;
   margin: 0 auto;
 }
 
-.mailing-form > button {
+.mailing-form__button {
+  @extend %button;
   display: flex;
   align-items: center;
   margin-top: 47px;
+  padding: 10px 28px;
 }
 
-.ft-btn-text {
-  margin-left: 28px;
-  margin-right: 10px;
-}
-
-.button__image {
+.button__icon--end {
+  margin-left: 10px;
   fill: #fff;
 }
 
-.modal-close {
+.modal__button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,11 +33,13 @@ button {
   background-color: var(--primary-bg-color);
 }
 
-.modal-btn {
+.service-form__button {
+  @extend %button;
   margin-left: 125px;
 }
 
-.btn-menu {
+.portfolio__button {
+  @extend %button;
   color: var(--primary-text-color);
   background-color: var(--second-bg-color);
   box-shadow: none;
