--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -1,13 +1,12 @@
-.soc-list > li {
+.social-list__item {
   width: 44px;
   height: 44px;
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 
-.soc-list > li:not(:last-child) {
-  margin-right: 10px;
-}
-
-.soc-list a {
+.social-link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -15,6 +14,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  color: var(--link-color);
+  background-color: var(--primary-bg-color);
 
   transition-property: color, background-color;
   transition-duration: 250ms;
@@ -26,16 +28,11 @@
   }
 }
 
-.soc-list svg {
-  fill: currentColor;
-}
-
-.comand-soc-link {
-  color: var(--link-color);
-  background-color: var(--primary-bg-color);
-}
-
-.ft-soc-link {
+.social-link--grey {
   color: var(--primary-bg-color);
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social__icon {
+  fill: currentColor;
 }
