--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
-@import './utils/index.scss';
-@import './base/index.scss';
-@import './components/index.scss';
-@import './layouts/index.scss';
+@import './utils/index';
+@import './base/index';
+@import './components/index';
+@import './layouts/index';
