--- a/css/main.css
+++ b/css/main.css
@@ -889,7 +889,7 @@ ul {
 .service-form__textarea {
   resize: none;
   height: 120px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -966,6 +966,8 @@ ul {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-bottom: 0;
+  margin-top: 0;
   color: var(--second-text-color);
 }
 
