--- a/sass/layouts/_modal-window.scss
+++ b/sass/layouts/_modal-window.scss
@@ -113,7 +113,7 @@
 .service-form__textarea {
   resize: none;
   height: 120px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   padding: 12px 16px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -174,6 +174,8 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
 
+  margin-bottom: 0;
+  margin-top: 0;
   color: var(--second-text-color);
 }
 
